重构JVM 优化